# PulseScope

./: .gitignore  LICENSE  README.md  decision-matrix.html
.github/workflows/: ci.yml
docs/: hardware.md  protocol.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/include/: capture.h  protocol.h  ringbuffer.h  trigger.h  usb_cdc.h
firmware/src/: capture.c  main.c  protocol.c  ringbuffer.c  trigger.c  usb_cdc.c
host/: pyproject.toml  requirements-dev.txt
host/examples/: basic_capture.py  decode_uart.py  triggered_capture.py
host/src/pulsescope/: __init__.py  __main__.py  capture.py  cli.py  protocol.py  transport.py  waveform.py
host/src/pulsescope/decoder/: __init__.py  base.py  can.py  i2c.py  spi.py  uart.py
host/tests/: test_protocol.py  test_transport.py  test_waveform.py
