[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsescope"
version = "1.0.0"
description = "PulseScope 4-channel logic analyzer host software"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "click>=8.0",
    "numpy>=1.24",
    "scipy>=1.10",  # For signal processing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "black>=23.0",
]
gui = [
    "PySide6>=6.5",  # Optional GUI
]

[project.scripts]
pulsescope = "pulsescope.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pulsescope*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "C90", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"